Resolve error with push notifications not showing

--- a/extension/static/popup.css
+++ b/extension/static/popup.css
@@ -8,7 +8,7 @@ body {
     background: transparent !important;
 }
 
-header {
+header.main-header {
     display: none !important;
     visibility: hidden !important;
 }
